Build for python 3.13

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
   patches:
     - 216_be_compatible_with_cpu_only.patch
 
-{% set build = 3 %}
+{% set build = 4 %}
 {% set build = build + 300 %}  # [cuda_compiler_version != "None"]
 
 build:
@@ -32,6 +32,7 @@ build:
   skip: true      # [py<310]
   skip: true      # [win]
   skip: true      # [cuda_compiler_version == "11.8"]
+  skip: true      # [py<313 and pytorch == "2.4.0"]
 
 requirements:
   build:
