--- a/.ci_support/linux_64_c_compiler_version12cuda_compilercuda-nvcccuda_compiler_version12.0cxx_compiler_version12python3.11.____cpythonpytorch2.4.1.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compilercuda-nvcccuda_compiler_version12.0cxx_compiler_version12python3.11.____cpythonpytorch2.4.1.yaml
@@ -1,7 +1,7 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '13'
+- '12'
 c_stdlib:
 - sysroot
 c_stdlib_version:
@@ -13,13 +13,13 @@ channel_sources:
 channel_targets:
 - conda-forge main
 cuda_compiler:
-- None
+- cuda-nvcc
 cuda_compiler_version:
-- None
+- '12.0'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '13'
+- '12'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 pin_run_as_build:
@@ -29,9 +29,7 @@ pin_run_as_build:
 python:
 - 3.11.* *_cpython
 pytorch:
-- 2.4.0
 - 2.4.1
-- 2.5.1
 target_platform:
 - linux-64
 zip_keys:
