--- a/.ci_support/linux_64_cuda_compiler_version12.0python3.12.____cpython.yaml
+++ b/.ci_support/linux_64_cuda_compiler_version12.0python3.12.____cpython.yaml
@@ -21,7 +21,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-x86_64:alma8
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -36,7 +36,6 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-  - c_stdlib_version
   - cuda_compiler
   - cuda_compiler_version
   - docker_image
