--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,11 @@
-{% set git_hash_date = "20241014" %}
-{% set git_hash = "c2ec8e14a185632b0a5d8b161928ceb50197eddc" %}
+{% set git_hash_date = "20241212" %}
+{% set git_hash = "722d1d15111c689908aeeb82d49a57780aac5153" %}
 # They claim version 1.0 but they don't really release anything on pypi
-{% set version = "1.0.0." + git_hash_date + "." + git_hash %}
+# hmaarrfk -- 2024/12
+# I removed the hash from the version since the solver
+# would think they are beta / alpha versions.
+# I figure the date is enough.... maybe...
+{% set version = "1.0.0." + git_hash_date %}
 
 package:
   # Their package name is "SAM 2" pip claims it is "SAM-2"
@@ -11,7 +15,7 @@ package:
 
 source:
   url: https://github.com/facebookresearch/segment-anything-2/archive/{{ git_hash }}.tar.gz
-  sha256: 1fbc78e6b6cedc2b1cdcff6e42ad8004f991451c6dfce1bc5efc7d59c0f203b4
+  sha256: 6ad80e91020c10cdc515cdcf490ebb9de5be4ac0faf8107eea97825519008994
   patches:
     - 216_be_compatible_with_cpu_only.patch
 
@@ -59,17 +63,17 @@ requirements:
     - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
   run:
     - python
-    - hydra-core
+    - hydra-core >=1.3.2
     - pytorch
     - libtorch *=cuda*                       # [cuda_compiler_version != "None"]
-    - torchvision >=0.18.1
+    - torchvision >=0.20.1
     # https://github.com/facebookresearch/segment-anything-2/pull/216
     - scikit-image                           # [cuda_compiler_version == "None"]
     # It doesn't seem to be used anywhere in their code...
     # https://github.com/conda-forge/iopath-feedstock/pull/3
     - iopath >=0.1.10
     - tqdm
-    - pillow
+    - pillow >=9.4.0
     # avoid that people without GPUs needlessly download ~0.5-1GB
     - __cuda                                 # [cuda_compiler_version != "None"]
   run_constrained:
