--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,11 @@
+azure:
+  free_disk_space: true
+  settings_win:
+      variables:
+          CONDA_BLD_PATH: "C:\\bld\\"
 build_platform:
   osx_arm64: osx_64
+  linux_aarch64: linux_64
 conda_build:
   error_overlinking: true
 conda_forge_output_validation: true
