--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ build:
     - python -m pip install . -vv
   number: {{ build }}
   skip: true      # [py<310]
-  skip: true      # [win or aarch64]
+  skip: true      # [py!=312]
   skip: true      # [cuda_compiler_version == "11.8"]
 
 requirements:
