--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,7 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - pytorch                                # [build_platform != target_platform]
     - {{ stdlib('c') }}                      # [cuda_compiler_version != "None"]
     - {{ compiler('c') }}                    # [cuda_compiler_version != "None"]
     - {{ compiler('cxx') }}                  # [cuda_compiler_version != "None"]
