--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,8 +1,9 @@
 azure:
   free_disk_space: true
   settings_win:
-      variables:
-          CONDA_BLD_PATH: "C:\\bld\\"
+    variables:
+      CONDA_BLD_PATH: "C:\\bld\\"
+      MINIFORGE_HOME: "C:\\bld\\"
 build_platform:
   osx_arm64: osx_64
   linux_aarch64: linux_64
