--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -102,7 +102,8 @@ test:
   commands:
     - pip check
     # Tests that cuda compilation worked for the expected output
-    - test -f ${SP_DIR}/sam2/_C.so  # [cuda_compiler_version != "None"]
+    - test -f ${SP_DIR}/sam2/_C.so              # [linux and cuda_compiler_version != "None"]
+    - if not exist %SP_DIR%\sam2\_C.pyd exit 1  # [win and cuda_compiler_version != "None"]
 
 about:
   home: https://github.com/facebookresearch/segment-anything-2
