--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,6 +50,7 @@ requirements:
     - {{ compiler('cxx') }}                  # [cuda_compiler_version != "None"]
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
     - ninja                                  # [cuda_compiler_version != "None"]
+    - libcusparse-dev                        # [build_platform != target_platform and cuda_compiler_version != "None"]
     - cuda-cudart-dev                        # [build_platform != target_platform and cuda_compiler_version != "None"]
   host:
     - python
@@ -57,6 +58,7 @@ requirements:
     - setuptools
     - pytorch
     - libtorch *=cuda*                       # [cuda_compiler_version != "None"]
+    - libcusparse-dev                        # [cuda_compiler_version != "None"]
     - cuda-cudart-dev                        # [cuda_compiler_version != "None"]
     - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
   run:
