--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,8 +2,8 @@ azure:
   free_disk_space: true
   settings_win:
     variables:
-      CONDA_BLD_PATH: "C:\\bld\\"
-      MINIFORGE_HOME: "C:\\bld\\"
+      CONDA_BLD_PATH: C:\\bld
+      MINIFORGE_HOME: C:\\miniforge
 build_platform:
   osx_arm64: osx_64
   linux_aarch64: linux_64
