--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,8 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - libtorch *=cuda*                       # [cuda_compiler_version != "None" and build_platform != target_platform]
+    - pytorch                                # [cuda_compiler_version != "None" and build_platform != target_platform]
     - {{ stdlib('c') }}                      # [cuda_compiler_version != "None"]
     - {{ compiler('c') }}                    # [cuda_compiler_version != "None"]
     - {{ compiler('cxx') }}                  # [cuda_compiler_version != "None"]
@@ -97,7 +99,8 @@ test:
   commands:
     - pip check
     # Tests that cuda compilation worked for the expected output
-    - test -f ${SP_DIR}/sam2/_C.so  # [cuda_compiler_version != "None"]
+    - test -f ${SP_DIR}/sam2/_C.so               # [unix and cuda_compiler_version != "None"]
+    - if not exists %PS_DIR%\sam2\_C.lib exit 1  # [win and and cuda_compiler_version != "None"
 
 about:
   home: https://github.com/facebookresearch/segment-anything-2
