--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set git_hash_date = "20241212" %}
-{% set git_hash = "722d1d15111c689908aeeb82d49a57780aac5153" %}
+{% set git_hash_date = "20241215" %}
+{% set git_hash = "2b90b9f5ceec907a1c18123530e92e794ad901a4" %}
 # They claim version 1.0 but they don't really release anything on pypi
 # hmaarrfk -- 2024/12
 # I removed the hash from the version since the solver
@@ -19,7 +19,7 @@ source:
   patches:
     - 216_be_compatible_with_cpu_only.patch
 
-{% set build = 9 %}
+{% set build = 0 %}
 {% set build = build + 300 %}  # [cuda_compiler_version != "None"]
 
 build:
@@ -59,6 +59,7 @@ requirements:
     - pip
     - setuptools
     - pytorch
+    - libtorch *=cpu*                        # [cuda_compiler_version == "None"]
     - libtorch *=cuda*                       # [cuda_compiler_version != "None"]
     - libcublas-dev                          # [cuda_compiler_version != "None"]
     - libcusolver-dev                        # [cuda_compiler_version != "None"]
@@ -69,6 +70,7 @@ requirements:
     - python
     - hydra-core >=1.3.2
     - pytorch
+    - libtorch *=cpu*                        # [cuda_compiler_version == "None"]
     - libtorch *=cuda*                       # [cuda_compiler_version != "None"]
     - torchvision >=0.20.1
     # https://github.com/facebookresearch/segment-anything-2/pull/216
